objects/Promotion__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Customer_Support_Instructions__c</fullName>
        <label>Customer Support Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Links__c</fullName>
        <label>Internal Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Promotion_End_Date__c</fullName>
        <label>Promotion End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Start_Date__c</fullName>
        <label>Promotion Start Date</label>
        <type>Date</type>
    </fields>
    <label>Promotion</label>
    <pluralLabel>Promotions</pluralLabel>
</CustomObject>